header-actions position fixed bug on ios devices fixed

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -20,6 +20,12 @@ html {
   scroll-behavior: smooth;
   height: -webkit-fill-available;
   height: -moz-available;
+  height: 100%;
+    height: -moz-available;
+    /* WebKit-based browsers will ignore this. */
+    height: -webkit-fill-available;
+    /* Mozilla-based browsers will ignore this. */
+    height: fill-available;
 }
 
 body {
@@ -27,6 +33,12 @@ body {
   height: -webkit-fill-available;
   height: -moz-available;
   margin-inline: auto;
+  height: 100%;
+    height: -moz-available;
+    /* WebKit-based browsers will ignore this. */
+    height: -webkit-fill-available;
+    /* Mozilla-based browsers will ignore this. */
+    height: fill-available;
 }
 
 li {
